# tenacious-conversion-engine

./: .env.example  .gitignore  LICENSE  README.md  baseline.md  main.py  pyproject.toml  test_api.py
.github/workflows/: ci.yml
agent/: __init__.py  api.py  config.py  main.py  server.py
agent/crm/: hubspot.py  hubspot_crm.py
agent/enrichment/: ai_maturity_scorer.py  competitor_gap.py  pipeline.py  signal_pipeline.py
agent/handlers/: booking.py  calendar_handler.py  channel_handoff.py  email.py  email_handler.py  sms.py  sms_handler.py
agent/mechanisms/: confidence_phrasing.py
agent/prompts/: system_prompt.md
eval/: latency_results.json  score_log.json  tau2_harness.py  trace_log.jsonl
memo/: evidence_graph.json  memo.html  memo_content.md
method/: ablation_results.json  held_out_traces.jsonl  method.md
probes/: failure_taxonomy.md  probe_library.md  target_failure_mode.md
scripts/: test_conversation.py
